--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,9 +1,4 @@
 <form action="/cart" method="post">
-  <button class="btn" type="submit">Add to Cart</button>
-  <input type="hidden" name="productId" value="<%= product.Id %>" />
-</form>
-
-<form action="/delete" method="get">
-  <button class="btn">Delete</button>
-  <input type="hidden" name="productId" value="<%= product.Id %>" />
+    <button class="btn" type="submit">Add to Cart</button>
+    <input type="hidden" name="productId" value="<%= product.id %>">
 </form>
